# ChangeLog for sys-cluster/ipvsadm
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/ipvsadm/ChangeLog,v 1.16 2005/01/21 18:18:13 xmerlin Exp $

  21 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> ipvsadm-1.21-r1.ebuild:
  added missing dependency virtual-sources, ipvsadm needs kernel source to
  compile

  21 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> ipvsadm-1.21-r1.ebuild:
  updated copyright, added additional checks on kernel version (1.21 works only
  on kernel 2.4.x)

  03 Sep 2004; David Holm <dholm@gentoo.org> ipvsadm-1.21-r1.ebuild:
  Added to ~ppc.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  ipvsadm-1.21-r1.ebuild, ipvsadm-1.24.ebuild:
  virtual/glibc -> virtual/libc

  07 Jun 2004; Michael Imhof <tantive@gentoo.org> ipvsadm-1.21-r1.ebuild,
  ipvsadm-1.24.ebuild:
  Added missing header and lib. Closes #51217.

  12 Mar 2004; Michael Imhof <tantive@gentoo.org> :
  Corrected the digest. Closes #43123.

  27 Dec 2003; Brian Jackson <iggy@gentoo.org> ipvsadm-1.24.ebuild:
  files/ipvsadm-init:
  version bump, 1.24 is for 2.6 kernels, if you are still using a 2.4 kernel,
  stick with 1.21. Also corrected a problem with the init script, closes 36446,
  thanks to csnyder@mvpsoft.com

*ipvsadm-1.21-r1 (23 Nov 2003)

  23 Nov 2003; Brian Jackson <iggy@gentoo.org> ipvsadm-1.21.ebuild:
  bumped the ebuild so people get my recent work, closes bug 32906, thanks to
  smulloni@smullyan.org for the heads up

  14 Nov 2003; Brian Jackson <iggy@gentoo.org> ipvsadm-1.21.ebuild,
  files/ipvsadm-init:
  fixed a little typo in the ebuild, and some references to iptables in the init
  script

  12 Nov 2003; Brian Jackson <iggy@gentoo.org> ipvsadm-1.21.ebuild,
  files/ipvsadm-init:
  added an init script to fix bug 32906, not bumping the -r yet as I want to get somebody
  to test it

  18 Aug 2003; <iggy@gentoo.org> ipvsadm-1.21.ebuild: