@@ -1,8 +1,8 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 faf3f9ff4dcf3e99f8eb22cb0e709e33 ipvsadm-1.24.ebuild 1196
-MD5 97fa0a9c3499891eb43989a1a6200067 ChangeLog 2367
+MD5 f28e4837176ac72807bceee8eecd536f ipvsadm-1.24.ebuild 1396
+MD5 1461208766b567b691ecf84a8c74bea2 ChangeLog 2661
 MD5 f8149340999d7088d0b706591237ec73 metadata.xml 332
 MD5 a69d465682e84d5e33ff185020ba28c9 ipvsadm-1.21-r1.ebuild 1349
 MD5 1b3d2656b8219fca2114015a5ed932c9 files/digest-ipvsadm-1.24 63
@@ -11,7 +11,7 @@ MD5 3b3c592fdf57e4760d02989b8ee11562 files/ipvsadm-init 764
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFB8YPkgMUyd/cdjWsRAjIbAJsH34/npb+eOf+M59HyvZ980K2UzwCfYITC
-/DLXnXJHXk2jV1HHjVdVtjk=
-=uhW7
+iD8DBQFB8YXkgMUyd/cdjWsRAqELAKCBdufoQeRUoubCINsb5NogxJfcxQCeLCvL
+hYUpc7R4TBvqBAqZXsmzFuE=
+=PG2G
 -----END PGP SIGNATURE-----
