@@ -1,34 +1,40 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/ipvsadm/ipvsadm-1.24.ebuild,v 1.7 2005/01/21 18:14:37 xmerlin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/ipvsadm/ipvsadm-1.24.ebuild,v 1.8 2005/01/21 18:26:44 xmerlin Exp $
 
+inherit check-kernel
 
 DESCRIPTION="ipvsadm is a utility to administer the IP virtual server services offered by the Linux kernel with IP virtual server support."
 HOMEPAGE="http://linuxvirtualserver.org"
 LICENSE="GPL-2"
 DEPEND="virtual/libc
+	virtual/linux-sources
 	>=sys-libs/ncurses-5.2"
 
 SRC_URI="http://www.linuxvirtualserver.org/software/kernel-2.5/${P}.tar.gz"
 
 SLOT="0"
-KEYWORDS="-*"
+KEYWORDS="~x86"
 IUSE=""
 
+pkg_setup() {
+	if is_2_4_kernel
+	then
+		die "${P} supports only 2.5 and 2.6 kernels, please try ${PN}-1.24 for 2.4 kernels"
+	fi
+}
+
+
 src_compile() {
-	cd "${S}"
-	make || die
+	check_KV
+	make || die "error compiling source"
 }
 
 src_install() {
 	into /
-	dosbin ipvsadm
-	dosbin ipvsadm-save
-	dosbin ipvsadm-restore
+	dosbin ipvsadm ipvsadm-save ipvsadm-restore || die
 
-	doman ipvsadm.8
-	doman ipvsadm-save.8
-	doman ipvsadm-restore.8
+	doman ipvsadm.8 ipvsadm-save.8 ipvsadm-restore.8 || die
 
 	exeinto /etc/init.d
 	newexe ${FILESDIR}/ipvsadm-init ipvsadm
@@ -40,10 +46,10 @@ src_install() {
 
 	insopts -m 644 -o root -g root
 	insinto /usr/lib
-	doins libipvs/libipvs.a
+	doins libipvs/libipvs.a || die
 
 	insinto /usr/include/ipvs
-	newins libipvs/libipvs.h ipvs.h
+	newins libipvs/libipvs.h ipvs.h || die
 
 	einfo "You will need a kernel that has ipvs patches to use LVS."
 	einfo "This version is specicifically for 2.6 kernels."
