@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/ipvsadm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/ipvsadm/ChangeLog,v 1.16 2005/01/21 18:18:13 xmerlin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/ipvsadm/ChangeLog,v 1.17 2005/01/21 18:26:44 xmerlin Exp $
+
+  21 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> ipvsadm-1.24.ebuild:
+  unmasked, it's stable on 2.6 kernels and I want test it in the portage
+
+  21 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> ipvsadm-1.24.ebuild:
+  merged additional checks added in ipvsadm-1.21 in the 1.24 version
 
   21 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> ipvsadm-1.21-r1.ebuild:
   added missing dependency virtual-sources, ipvsadm needs kernel source to
